--- a/iRedMail/ChangeLog
+++ b/iRedMail/ChangeLog
@@ -1,3 +1,8 @@
+iRedMail-0.7.0-beta6:
+    * Enable iRedAPD for MySQL backend. Used for mail alias deliver
+      restrictions. Reference:
+      http://www.iredmail.org/wiki/index.php?title=Install/iRedAPD/MySQL
+
 iRedMail-0.7.0-beta5:
     * Reverse Amavisd LDAP query base dn.
     * Install python-xml on OpenSuSE 11.4.
