--- a/iRedMail/ChangeLog
+++ b/iRedMail/ChangeLog
@@ -1,3 +1,6 @@
+iRedMail-0.7.0:
+    * Create indexes for some columns in MySQL backend.
+
 iRedMail-0.7.0-beta6:
     * Enable iRedAPD for MySQL backend. Used for mail alias deliver
       restrictions. Reference:
