Make catch-all account work as expected with MySQL backend.

--- a/iRedMail/ChangeLog
+++ b/iRedMail/ChangeLog
@@ -1,4 +1,5 @@
 iRedMail-0.7.0:
+    * Make catch-all account work as expected with MySQL backend.
     * Create indexes for some columns in MySQL backend.
 
 iRedMail-0.7.0-beta6:
