--- a/iRedMail/ChangeLog
+++ b/iRedMail/ChangeLog
@@ -1,3 +1,6 @@
+iRedMail-0.7.0:
+    * Save date of password last change while updating password in roundcube.
+
 iRedMail-0.7.0-rc3:
     * Make IMAP share folder work with LDAP backend. Thanks alexp@forum.
     * Update phpMyAdmin to 3.3.10.
