--- a/iRedMail/ChangeLog
+++ b/iRedMail/ChangeLog
@@ -1,4 +1,7 @@
 iRedMail-0.7.1:
+    * Increase Postfix timeout seconds: smtp_data_init_timeout (120s -> 240s),
+      and smtp_data_xfer_timeout (180s -> 600s). Hope to avoid some timeout
+      issues. Thanks write4saini@forum, mbsouth@forum.
     * Integrate Fail2ban.
     * Support domain alias in relay_domains (MySQL backend special).
       Thanks atros@forum.
