--- a/iRedMail/ChangeLog
+++ b/iRedMail/ChangeLog
@@ -1,4 +1,5 @@
 iRedMail-0.7.3:
+    * Mbox format mailbox is not supported anymore.
     * Add smtp-amavis_destination_recipient_limit=1 in Postfix for concurrency
       per-recipient limit. Thanks beez <jason@indo.net.id>.
 
