--- a/iRedMail/ChangeLog
+++ b/iRedMail/ChangeLog
@@ -6,6 +6,7 @@ iRedMail-0.7.3-rc1:
     * Add smtp-amavis_destination_recipient_limit=1 in Postfix for concurrency
       per-recipient limit. Thanks beez <jason@indo.net.id>.
     * Package update:
+        + iRedAdmin -> 0.1.6
         + phpMyAdmin -> 3.4.3.1
 
 iRedMail-0.7.2:
